--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi perspiciatis cumque hic itaque porro! Numquam hic perspiciatis, suscipit ipsa maxime, consequatur animi neque explicabo ea modi corporis qui, amet quasi?</p>
+            <p>A <ABBr title="HyperText Markup Language">HTML</ABBr> é uma linguagem de marcação para criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets"> CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius saepe enim facilis assumenda, sequi iure molestias cupiditate dolore delectus quam vero nemo harum ex eum commodi, quas odit voluptatem vitae.</p>
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
         </article>
     </main>
 </body>
